src/test/ui/async-await/issue-74072-lifetime-name-annotations.stderr
error[E0506]: cannot assign to `*x` because it is borrowed
  --> $DIR/issue-74072-lifetime-name-annotations.rs:9:5
   |
LL |     let y = &*x;
   |             --- borrow of `*x` occurs here
LL |     *x += 1;
   |     ^^^^^^^ assignment to borrowed `*x` occurs here
LL |     y
   |     - borrow later used here

error[E0506]: cannot assign to `*x` because it is borrowed
  --> $DIR/issue-74072-lifetime-name-annotations.rs:16:9
   |
LL |         let y = &*x;
   |                 --- borrow of `*x` occurs here
LL |         *x += 1;
   |         ^^^^^^^ assignment to borrowed `*x` occurs here
LL |         y
   |         - borrow later used here

error[E0506]: cannot assign to `*x` because it is borrowed
  --> $DIR/issue-74072-lifetime-name-annotations.rs:24:9
   |
LL |         let y = &*x;
   |                 --- borrow of `*x` occurs here
LL |         *x += 1;
   |         ^^^^^^^ assignment to borrowed `*x` occurs here
LL |         y
   |         - borrow later used here

error[E0506]: cannot assign to `*x` because it is borrowed
  --> $DIR/issue-74072-lifetime-name-annotations.rs:32:9
   |
LL |         let y = &*x;
   |                 --- borrow of `*x` occurs here
LL |         *x += 1;
   |         ^^^^^^^ assignment to borrowed `*x` occurs here
LL |         y
   |         - borrow later used here

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0506`.
